Cut more words out.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % abstract.tex - Ian Huston
-% $Id: abstract.tex,v 1.6 2009/08/15 16:54:03 ith Exp $
+% $Id: abstract.tex,v 1.7 2009/08/15 17:00:02 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.6 2009/08/15 16:54:03 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.7 2009/08/15 17:00:02 ith Exp $}
 % 
 % 
 \chapter*{Abstract}
@@ -14,7 +14,7 @@
 Inflationary cosmology is the leading explanation of the very early universe. 
 Many specific models have been derived which agree with current observations.
 The non-gaussianity of the universe shortly after the Big Bang has emerged as
-an important tool to differentiate between these models. In this thesis
+an important tool to differentiate between these models. In this work
 two aspects of the search for non-gaussianity are described.
 
 First, string-inspired models with large non-gaussianity are investigated.
@@ -26,7 +26,7 @@ generated during ultra-violet Dirac-Born-Infeld inflation is derived.
 % dimensions and can be expressed entirely in terms of observational parameters
 % once the volume of the five-dimensional sub-manifold of the throat has been
 % specified. 
-For standard type IIB compactification schemes, the bound predicts
+The bound predicts
 undetectably small tensor perturbations with a tensor-scalar ratio $r <
 10^{-7}$. 
 This is incompatible with a corresponding lower limit of $r > 0.1
@@ -37,7 +37,7 @@ This is incompatible with a corresponding lower limit of $r > 0.1
 
 % Second Paper
 Extending this analysis, a class of non-canonical inflationary models is
-identified, where the leading-order contribution to the non-gaussianity of the
+identified where the leading-order contribution to the non-gaussianity of the
 curvature perturbation is determined by the sound speed of the fluctuations in
 the inflaton field. 
 This class of models includes the effective action for
@@ -45,22 +45,21 @@ multiple coincident branes in the finite n limit.
 % The action for this
 % configuration is determined using an iterative technique, based upon the
 % fundamental representation of SU(2). 
-In principle, the upper bounds on the
-tensor-scalar ratio that arise in the standard, single-brane DBI inflationary
-scenario can be relaxed in multi-brane configurations if a large and
+In principle, the upper bounds on $r$ that arise in the single-brane
+DBI scenario can be relaxed in multi-brane configurations if a large and
 detectable non-Gaussianity is generated. 
 % Moreover models with a small number of
 % coincident branes could generate a gravitational wave background that will be
 % observable to future experiments. 
 
 % Third paper
-The second aspect of non-gaussianity is described with the numerical calculation
+The second aspect of non-gaussianity described is the numerical calculation
 of the non-gaussian parameter $\fnl$ for a general class of single field models.
-We numerically solve the Klein-Gordon equation at second
-order in cosmological perturbation theory in closed form. 
-We use the slow-roll
-version of the second order source term and show that our method is extendable
-to the full equation.
+The Klein-Gordon equation at second
+order in cosmological perturbation theory is numerically solved in closed form. 
+The slow-roll
+version of the second order source term is used and the method is
+shown to be extendable to the full equation.
 % We consider two standard single field models and find that
 % the results agree with previous calculations using analytic methods, where
 % comparison is possible. 
