Word count now below 300.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % abstract.tex - Ian Huston
-% $Id: abstract.tex,v 1.7 2009/08/15 17:00:02 ith Exp $
+% $Id: abstract.tex,v 1.8 2009/08/15 17:26:13 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.7 2009/08/15 17:00:02 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.8 2009/08/15 17:26:13 ith Exp $}
 % 
 % 
 \chapter*{Abstract}
@@ -19,7 +19,7 @@ two aspects of the search for non-gaussianity are described.
 
 First, string-inspired models with large non-gaussianity are investigated.
 % First paper
-An upper bound on the amplitude of the primordial gravitational wave spectrum
+An upper bound on the primordial gravitational wave spectrum
 generated during ultra-violet Dirac-Born-Infeld inflation is derived. 
 % The bound is insensitive
 % to the form of the inflaton potential and the warp factor of the compactified
@@ -31,23 +31,23 @@ undetectably small tensor perturbations with a tensor-scalar ratio $r <
 10^{-7}$. 
 This is incompatible with a corresponding lower limit of $r > 0.1
 (1-n_s)$, which applies to any model that generates a red spectral index $n_s
-<1$ and a potentially detectable non-gaussianity in the curvature perturbation.
+<1$ and a potentially detectable non-gaussianity.
 % Possible ways of evading these bounds in more general DBI-type scenarios are
 % discussed and a multiple-brane model is investigated as a specific example. 
 
 % Second Paper
 Extending this analysis, a class of non-canonical inflationary models is
-identified where the leading-order contribution to the non-gaussianity of the
-curvature perturbation is determined by the sound speed of the fluctuations in
+identified where the leading-order contribution to the non-gaussianity is
+determined by the sound speed of the fluctuations in
 the inflaton field. 
 This class of models includes the effective action for
-multiple coincident branes in the finite n limit. 
+multiple coincident branes in the finite $n$ limit. 
 % The action for this
 % configuration is determined using an iterative technique, based upon the
 % fundamental representation of SU(2). 
-In principle, the upper bounds on $r$ that arise in the single-brane
+The upper bounds on $r$ in the single-brane
 DBI scenario can be relaxed in multi-brane configurations if a large and
-detectable non-Gaussianity is generated. 
+detectable non-gaussianity is generated. 
 % Moreover models with a small number of
 % coincident branes could generate a gravitational wave background that will be
 % observable to future experiments. 
@@ -64,5 +64,5 @@ shown to be extendable to the full equation.
 % the results agree with previous calculations using analytic methods, where
 % comparison is possible. 
 The procedure allows the evolution of second order
-perturbations in general and the calculation of the parameter
-$\fnl$ to be examined in cases where there is no analytical solution available. 
+perturbations in general and the calculation of $\fnl$ in cases
+where there is no analytical solution available. 
