Added lists of contents for each section.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.11 2009/08/16 11:19:56 ith Exp $
+% $Id: mainintro.tex,v 1.12 2009/08/16 11:26:40 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.11 2009/08/16 11:19:56 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.12 2009/08/16 11:26:40 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -13,6 +13,12 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\begin{itemize}
+ \item General wordy introduction
+ \item Inflation very successful
+ \item Non-gaussianity as new tool
+ \item Outline of intro chapter
+\end{itemize}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -22,6 +28,12 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\begin{itemize}
+ \item Standard FRW metric
+ \item Flat FRW eqns, critical density
+ \item Scale factor, accel eqns
+\end{itemize}
+
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -44,6 +56,17 @@ defines the reduced Planck mass and $c=\hbar =1$.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\begin{itemize}
+ \item Canonical action
+ \item Scalard fields $\rho$ and $P$
+ \item Friedmann eqns for $\varphi$
+ \item Slow roll params
+ \item Perturbation theory, general and first order
+ \item $\delta\rho/\rho$ connection to $\delta \varphi$
+ \item Initial conditions, Bunch-Davies vacuum
+ \item  Power spectra, spectral index
+\end{itemize}
+
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -167,6 +190,11 @@ equilateral triangle becomes $-151 < \fnl < 253$.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\begin{itemize}
+ \item Deviation from uncoupled standard case
+ \item Defn of $\fnl$, higher order terms
+\end{itemize}
+
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -176,6 +204,11 @@ equilateral triangle becomes $-151 < \fnl < 253$.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\begin{itemize}
+ \item WMAP results
+ \item Other ground based observations
+ \item Current status of inflation in general and specific inflationary models
+\end{itemize}
 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -186,4 +219,9 @@ equilateral triangle becomes $-151 < \fnl < 253$.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\begin{itemize}
+ \item Main aims
+ \item Chapter by chapter
+ \item Description of two separate parts
+\end{itemize}
 
