--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.26 2009/08/06 15:44:24 ith Exp $
+% $Id: thesis.tex,v 1.27 2009/08/16 11:40:39 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
  twoside,
@@ -26,7 +26,7 @@ onehalfspacing % onehalfspacing or doublespacing
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.26 2009/08/06 15:44:24 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.27 2009/08/16 11:40:39 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
@@ -39,6 +39,7 @@ mainintro,
 dbi/dbi-intro,
 dbi/dbi,
 dbi/multibrane,
+numerical/perts,
 numerical/numerical,
 theend
 }
@@ -92,6 +93,7 @@ theend
 % Part II: Numerical simulations
 \part{Numerical simulations of perturbations}
 \label{part:numerical}
+\include{numerical/perts}
 \include{numerical/numerical}
 % % % % % % % % % % % % % % % % % % % % % % % % %
 
