--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical.tex - Ian Huston
-% $Id: numerical.tex,v 1.8 2009/08/16 11:37:12 ith Exp $
+% $Id: numerical.tex,v 1.9 2009/08/16 11:40:47 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.8 2009/08/16 11:37:12 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.9 2009/08/16 11:40:47 ith Exp $}
 % \input{numerical/paper3}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -15,7 +15,7 @@
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-
+\addtodo{Add intro to numerics}
 % 
 % 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
