Added in abstract.

--- a/writingupreport.tex
+++ b/writingupreport.tex
@@ -1,5 +1,6 @@
-\documentclass[a4paper,10pt]{article}
-
+\documentclass[a4paper,11pt]{article}
+\usepackage{ihmacros}
+\usepackage{fullpage}
 
 %opening
 \title{Application to transfer to writing up status}
@@ -13,10 +14,71 @@ This document outlines my plan to complete my thesis by 1st November 2009. I am 
 transfer to writing-up status beginning on the 20th September 2009. I have already begun the
 process of writing-up and believe that I can complete my work in the timetable provided below. 
 
+\section*{Title and abstract}
+The title of my thesis is ``Investigating inflation with branes and perturbations'' and the current
+abstract is:
+\\
+
+Inflationary cosmology is the leading explanation of the very early universe. 
+Many specific models have been derived which agree with current observations.
+The non-gaussianity of the universe shortly after the Big Bang has emerged as
+an important tool to differentiate between these models. In this work
+two aspects of the search for non-gaussianity are described.
+
+First, string-inspired models with large non-gaussianity are investigated.
+% First paper
+An upper bound on the primordial gravitational wave spectrum
+generated during ultra-violet Dirac-Born-Infeld inflation is derived. 
+% The bound is insensitive
+% to the form of the inflaton potential and the warp factor of the compactified
+% dimensions and can be expressed entirely in terms of observational parameters
+% once the volume of the five-dimensional sub-manifold of the throat has been
+% specified. 
+The bound predicts
+undetectably small tensor perturbations with a tensor-scalar ratio $r <
+10^{-7}$. 
+This is incompatible with a corresponding lower limit of $r > 0.1
+(1-n_s)$, which applies to any model that generates a red spectral index $n_s
+<1$ and a potentially detectable non-gaussianity.
+% Possible ways of evading these bounds in more general DBI-type scenarios are
+% discussed and a multiple-brane model is investigated as a specific example. 
+
+% Second Paper
+Extending this analysis, a class of non-canonical inflationary models is
+identified where the leading-order contribution to the non-gaussianity is
+determined by the sound speed of the fluctuations in
+the inflaton field. 
+This class of models includes the effective action for
+multiple coincident branes in the finite $n$ limit. 
+% The action for this
+% configuration is determined using an iterative technique, based upon the
+% fundamental representation of SU(2). 
+The upper bounds on $r$ in the single-brane
+DBI scenario can be relaxed in multi-brane configurations if a large and
+detectable non-gaussianity is generated. 
+% Moreover models with a small number of
+% coincident branes could generate a gravitational wave background that will be
+% observable to future experiments. 
+
+% Third paper
+The second aspect of non-gaussianity described is the numerical calculation
+of the non-gaussian parameter $\fnl$ for a general class of single field models.
+The Klein-Gordon equation at second
+order in cosmological perturbation theory is numerically solved in closed form. 
+The slow-roll
+version of the second order source term is used and the method is
+shown to be extendable to the full equation.
+% We consider two standard single field models and find that
+% the results agree with previous calculations using analytic methods, where
+% comparison is possible. 
+The procedure allows the evolution of second order
+perturbations in general and the calculation of $\fnl$ in cases
+where there is no analytical solution available. 
+
 \section*{Table of contents}
 \begin{verbatim}
 1. Introduction
-        Timescale: 1 month
+        Timescale: 1/2 month
 1.1. The Friedmann-Robertson-Walker Universe
 1.2. Canonical Slow Roll Inflation
 1.3. Non-Canonical Inflation
