--- a/abstract.tex
+++ b/abstract.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % abstract.tex - Ian Huston
-% $Id: abstract.tex,v 1.8 2009/08/15 17:26:13 ith Exp $
+% $Id: abstract.tex,v 1.9 2009/08/17 13:13:02 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.8 2009/08/15 17:26:13 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.9 2009/08/17 13:13:02 ith Exp $}
 % 
 % 
 \chapter*{Abstract}
@@ -21,6 +21,7 @@ First, string-inspired models with large non-gaussianity are investigated.
 % First paper
 An upper bound on the primordial gravitational wave spectrum
 generated during ultra-violet Dirac-Born-Infeld inflation is derived. 
+
 % The bound is insensitive
 % to the form of the inflaton potential and the warp factor of the compactified
 % dimensions and can be expressed entirely in terms of observational parameters
@@ -53,10 +54,10 @@ detectable non-gaussianity is generated.
 % observable to future experiments. 
 
 % Third paper
-The second aspect of non-gaussianity described is the numerical calculation
-of the non-gaussian parameter $\fnl$ for a general class of single field models.
+The second aspect method of constraining inflationary models is the numerical calculation
+of second order perturbations for a general class of single field models.
 The Klein-Gordon equation at second
-order in cosmological perturbation theory is numerically solved in closed form. 
+order is numerically solved in closed form. 
 The slow-roll
 version of the second order source term is used and the method is
 shown to be extendable to the full equation.
@@ -64,5 +65,5 @@ shown to be extendable to the full equation.
 % the results agree with previous calculations using analytic methods, where
 % comparison is possible. 
 The procedure allows the evolution of second order
-perturbations in general and the calculation of $\fnl$ in cases
+perturbations in general and the calculation of the non-gaussianity parameter in cases
 where there is no analytical solution available. 
