Change to final title.

--- a/title.tex
+++ b/title.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % 
 % title.tex - Ian Huston
-% $Id: title.tex,v 1.3 2009/07/17 11:12:40 ith Exp $
+% $Id: title.tex,v 1.4 2009/08/17 13:13:10 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: title.tex,v 1.3 2009/07/17 11:12:40 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: title.tex,v 1.4 2009/08/17 13:13:10 ith Exp $}
 % 
 \college{Queen Mary}
 % 
@@ -15,13 +15,15 @@
 % 
 % 
 % 
-\title{Distinguishing inflationary models using higher order statistics}
+\title{Constraining inflationary scenarios with braneworld models and second order cosmological
+perturbations}
 % 
 % 
 \author{Ian Huston}
 % 
 % 
-\hypersetup{pdftitle={Distinguishing inflationary models using higher order statistics},
+\hypersetup{pdftitle={Constraining inflationary scenarios with braneworld models and second order
+cosmological perturbations},
             pdfauthor={Ian Huston}}
 % 
 \maketitle
