--- a/abstract.tex
+++ b/abstract.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % abstract.tex - Ian Huston
-% $Id: abstract.tex,v 1.9 2009/08/17 13:13:02 ith Exp $
+% $Id: abstract.tex,v 1.10 2009/08/17 13:57:16 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.9 2009/08/17 13:13:02 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.10 2009/08/17 13:57:16 ith Exp $}
 % 
 % 
 \chapter*{Abstract}
@@ -12,58 +12,62 @@
 \section*{}
 \singlespacing
 Inflationary cosmology is the leading explanation of the very early universe. 
-Many specific models have been derived which agree with current observations.
-The non-gaussianity of the universe shortly after the Big Bang has emerged as
-an important tool to differentiate between these models. In this work
-two aspects of the search for non-gaussianity are described.
+Many different models of inflation have been constructed which fit current observational data.
+In this work theoretical and numerical methods for constraining the parameter space of these models
+are described.
 
-First, string-inspired models with large non-gaussianity are investigated.
+First, string-theoretic models with large non-gaussian signatures are investigated.
 % First paper
-An upper bound on the primordial gravitational wave spectrum
-generated during ultra-violet Dirac-Born-Infeld inflation is derived. 
+An upper bound is placed on the amplitude of primordial gravitational waves produced by ultra-violet
+Dirac-Born-Infeld inflation. In all but the most finely tuned cases this bound is incompatible with
+a lower bound derived for inflationary models which exhibit a red spectrum and detectable
+non-gaussianity. 
 
 % The bound is insensitive
 % to the form of the inflaton potential and the warp factor of the compactified
 % dimensions and can be expressed entirely in terms of observational parameters
 % once the volume of the five-dimensional sub-manifold of the throat has been
 % specified. 
-The bound predicts
-undetectably small tensor perturbations with a tensor-scalar ratio $r <
-10^{-7}$. 
-This is incompatible with a corresponding lower limit of $r > 0.1
-(1-n_s)$, which applies to any model that generates a red spectral index $n_s
-<1$ and a potentially detectable non-gaussianity.
-% Possible ways of evading these bounds in more general DBI-type scenarios are
-% discussed and a multiple-brane model is investigated as a specific example. 
-
-% Second Paper
-Extending this analysis, a class of non-canonical inflationary models is
-identified where the leading-order contribution to the non-gaussianity is
-determined by the sound speed of the fluctuations in
-the inflaton field. 
-This class of models includes the effective action for
-multiple coincident branes in the finite $n$ limit. 
-% The action for this
-% configuration is determined using an iterative technique, based upon the
-% fundamental representation of SU(2). 
-The upper bounds on $r$ in the single-brane
-DBI scenario can be relaxed in multi-brane configurations if a large and
-detectable non-gaussianity is generated. 
-% Moreover models with a small number of
-% coincident branes could generate a gravitational wave background that will be
-% observable to future experiments. 
+% The bound predicts
+% undetectably small tensor perturbations with a tensor-scalar ratio $r <
+% 10^{-7}$. 
+% This is incompatible with a corresponding lower limit of $r > 0.1
+% (1-n_s)$, which applies to any model that generates a red spectral index $n_s
+% <1$ and a potentially detectable non-gaussianity.
+% % Possible ways of evading these bounds in more general DBI-type scenarios are
+% % discussed and a multiple-brane model is investigated as a specific example. 
+% 
+% % Second Paper
+% Extending this analysis, a class of non-canonical inflationary models is
+% identified where the leading-order contribution to the non-gaussianity is
+% determined by the sound speed of the fluctuations in
+% the inflaton field. 
+% This class of models includes the effective action for
+% multiple coincident branes in the finite $n$ limit. 
+% % The action for this
+% % configuration is determined using an iterative technique, based upon the
+% % fundamental representation of SU(2). 
+% The upper bounds on $r$ in the single-brane
+% DBI scenario can be relaxed in multi-brane configurations if a large and
+% detectable non-gaussianity is generated. 
+% % Moreover models with a small number of
+% % coincident branes could generate a gravitational wave background that will be
+% % observable to future experiments. 
+By analysing general non-canonical actions, a class of models is found which can
+evade the upper bound when the phase speed of perturbations is small. The multi-coincident brane
+scenario with a finite number of branes is one such model. An iterative technique is used to
+determine the action for this case.
+For models with a possibly observable gravitational wave spectrum the number of coincident branes is
+shown to take only small values. 
 
 % Third paper
-The second aspect method of constraining inflationary models is the numerical calculation
+The second method of constraining inflationary models is the numerical calculation
 of second order perturbations for a general class of single field models.
-The Klein-Gordon equation at second
-order is numerically solved in closed form. 
-The slow-roll
-version of the second order source term is used and the method is
+The Klein-Gordon equation at second order is numerically solved in closed form. 
+The slow-roll version of the second order source term is used and the method is
 shown to be extendable to the full equation.
-% We consider two standard single field models and find that
-% the results agree with previous calculations using analytic methods, where
-% comparison is possible. 
-The procedure allows the evolution of second order
+This procedure allows the evolution of second order
 perturbations in general and the calculation of the non-gaussianity parameter in cases
-where there is no analytical solution available. 
+where there is no analytical solution available.  
+
+
