--- a/title.tex
+++ b/title.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % 
 % title.tex - Ian Huston
-% $Id: title.tex,v 1.4 2009/08/17 13:13:10 ith Exp $
+% $Id: title.tex,v 1.5 2009/08/17 13:57:30 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: title.tex,v 1.4 2009/08/17 13:13:10 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: title.tex,v 1.5 2009/08/17 13:57:30 ith Exp $}
 % 
 \college{Queen Mary}
 % 
@@ -23,7 +23,6 @@ perturbations}
 % 
 % 
 \hypersetup{pdftitle={Constraining inflationary scenarios with braneworld models and second order
-cosmological perturbations},
-            pdfauthor={Ian Huston}}
+cosmological perturbations},pdfauthor={Ian Huston}}
 % 
 \maketitle
