Started adding equations.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.12 2009/08/16 11:26:40 ith Exp $
+% $Id: mainintro.tex,v 1.13 2009/08/17 21:38:12 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.12 2009/08/16 11:26:40 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.13 2009/08/17 21:38:12 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -34,6 +34,7 @@
  \item Scale factor, accel eqns
 \end{itemize}
 
+equa
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
