--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.13 2009/08/17 21:38:12 ith Exp $
+% $Id: mainintro.tex,v 1.14 2009/08/18 11:41:28 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.13 2009/08/17 21:38:12 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.14 2009/08/18 11:41:28 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -28,13 +28,114 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\begin{itemize}
- \item Standard FRW metric
- \item Flat FRW eqns, critical density
- \item Scale factor, accel eqns
-\end{itemize}
+The central idea of Friedmann-Robertson-Walker (FRW) Universe is the
+cosmological principle. According to this postulate there is no privileged
+place in the universe and no privileged direction in which one can look. This
+is formalised by assuming that the universe is homogenous and isotropic, at
+least on large scales. 
+\addtodo{Cite SDSS, 2dF, etc and then Bianchi models, voids etc.}
+Surveys of the observable universe indicate that this is
+indeed the case at the largest scales accessible. Historically homogeneity and
+isotropy were assumed for simplicity and there are many
+other cosmologies that do not take this approach.
 
-equa
+
+By imposing both conditions on a generic metric, the line element of the
+FRW universe is obtained:
+\begin{equation}
+ \label{eq:frwmetric-intro}
+\d s^2 = -\d t^2 + a^2(t)
+  \left( 
+    \frac{\d r^2}{1-Kr^2} + r^2\left(\d\theta^2 + \sin^2(\theta) \d\phi^2\right)
+  \right)\,,
+\end{equation}
+where $K=+1, 0$ or $-1$ depending on whether the universe is closed, flat
+or open respectively. We will consider only the flat universe and take $K=0$
+from now on. 
+
+
+The spatial part of the FRW metric is multiplied by the term $a(t)$ known as the
+scale factor. This characterises the size of space-like hypersurfaces at
+different coordinate times. In an expanding universe $a$ grows with $t$ and
+$\dot{a}>0$ where an overdot represents differentiation with respect to $t$.
+The definition of the Hubble parameter $H$ captures this expansion (or
+contraction):
+% Definition of Hubble parameter
+\begin{equation}
+ \label{eq:Hdefn-intro}
+  H = \frac{\dot{a}}{a} \,.
+\end{equation}
+
+
+% Conformal time
+\begin{equation}
+\label{eq:etatime-intro}
+ \eta = \int\frac{\d t}{a}\,,
+\end{equation}
+a prime ($'$) signifies differentiation with respect to $\eta$.
+
+% Einstein Eqns
+$S=S_\mathrm{EH} + S_\mathrm{M}$
+\begin{eqnarray}
+\label{eq:EHeqn-intro}
+ S_\mathrm{EH} &=& \frac{1}{16\pi G}\int \d^4 x \sqrt{-g} \left(R +
+2\Lambda\right) \,,\\
+\label{eq:matteraction-intro}
+ S_\mathrm{M} &=& \int \d^4 x \sqrt{-g}
+\mathcal{L}_\mathrm{M} \,,
+\end{eqnarray}
+where $\mathcal{L}_\mathrm{M}$ is the sum of the Lagrangian densities for all
+the matter fields.
+
+\begin{equation}
+\label{eq:einstein-intro}
+ R_{\mu\nu} - \frac{1}{2}R g_{\mu\nu} = 8\pi G T_{\mu\nu} + \Lambda g_{\mu\nu}
+\end{equation}
+where $T_{\mu\nu}$ is the stress energy tensor obtained by the variation of the
+matter Lagrangian.
+
+Suppose $u^\mu$ is the 4-velocity of a perfect fluid with $u^\mu u_\mu=-1$ then
+the stress-energy tensor of the perfect fluid is
+\begin{equation}
+ \label{eq:fluidstress-intro}
+  T^\mu_\nu = (E + P)u^\mu u_\nu + P\delta^\mu_\nu \,,
+\end{equation}
+where $E$ is the matter energy density and $P$ is the isotropic pressure
+such that the trace of $T$ is 
+\begin{equation}
+ \label{eq:Ttrace-intro}
+  T^\mu_\nu = -E + 3P\,.
+\end{equation}
+
+From the metric in \eq{eq:frwmetric-intro} the $00$ and $ij$ components of the
+Ricci tensor can be found:
+\begin{eqnarray}
+\label{eq:Ricci00-intro}
+ R_{00} &=& -3 \frac{\ddot{a}}{a} \,,\\
+\label{eq:Ricciij-intro}
+ R_{ij} &=& \delta_{ij} \left[ 2\dot{a}^2 +
+  a \ddot{a} \right] \,.
+\end{eqnarray}
+
+The Friedmann equations can then be determined from the Einstein equations
+\eqref{eq:einstein-intro}:
+\begin{equation}
+ \label{eq:Friedmann1-intro}
+ H^2 = \left(\frac{\dot{a}}{a}\right)^2 = \frac{8\pi G}{3} E
+\end{equation}
+\begin{equation}
+ \label{eq:Friedmann2-intro}
+ \frac{\ddot{a}}{a}  = -\frac{1}{2} \frac{8\pi G}{3}(E + 3P)
+\end{equation}
+
+Continuity equation:
+\begin{equation}
+ \label{eq:continuity-intro}
+ \frac{\d E}{\d t} + 3H(E+P) = 0
+\end{equation}
+
+
+
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -47,6 +148,12 @@ equa
 Units are chosen such that $\Mpl \equiv (8\pi G )^{-1/2}= 2 
 .4 \times 10^{18}\, {\rm GeV}$ 
 defines the reduced Planck mass and $c=\hbar =1$. 
+
+An overdot ($\dot{}$) is used for differentiation with respect to coordinate
+time $t$ and a prime ($'$) for differentiation with respect to conformal time
+$\eta$. A subscripted comma denotes partial differentiation by the symbol it
+precedes, \eg $f_{,\varphi} = \dfrac{\d f}{\d \varphi}$.
+
 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
